--- a/src/SampleConnector.csproj
+++ b/src/SampleConnector.csproj
@@ -60,53 +60,53 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autodesk.DataExchange, Version=2.2.6.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.2.2.6-alpha\lib\net48\Autodesk.DataExchange.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange, Version=3.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.3.0.0-beta\lib\net48\Autodesk.DataExchange.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Authentication, Version=2.2.6.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.2.2.6-alpha\lib\net48\Autodesk.DataExchange.Authentication.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Authentication, Version=3.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.3.0.0-beta\lib\net48\Autodesk.DataExchange.Authentication.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.BaseModels, Version=2.2.6.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.UI.2.2.6-alpha\lib\net48\Autodesk.DataExchange.BaseModels.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.BaseModels, Version=3.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.UI.3.0.0-beta\lib\net48\Autodesk.DataExchange.BaseModels.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.ContractProvider, Version=2.2.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Autodesk.DataExchange.2.2.6-alpha\lib\net48\Autodesk.DataExchange.ContractProvider.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.ContractProvider, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Autodesk.DataExchange.3.0.0-beta\lib\net48\Autodesk.DataExchange.ContractProvider.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Core, Version=2.2.6.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.UI.2.2.6-alpha\lib\net48\Autodesk.DataExchange.Core.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Core, Version=3.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.UI.3.0.0-beta\lib\net48\Autodesk.DataExchange.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Exceptions, Version=2.2.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Autodesk.DataExchange.UI.2.2.6-alpha\lib\net48\Autodesk.DataExchange.Exceptions.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Exceptions, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Autodesk.DataExchange.UI.3.0.0-beta\lib\net48\Autodesk.DataExchange.Exceptions.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Extensions.HostingProvider, Version=2.2.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Autodesk.DataExchange.2.2.6-alpha\lib\net48\Autodesk.DataExchange.Extensions.HostingProvider.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Extensions.HostingProvider, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Autodesk.DataExchange.3.0.0-beta\lib\net48\Autodesk.DataExchange.Extensions.HostingProvider.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Extensions.Logging.File, Version=2.2.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Autodesk.DataExchange.2.2.6-alpha\lib\net48\Autodesk.DataExchange.Extensions.Logging.File.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Extensions.Logging.File, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Autodesk.DataExchange.3.0.0-beta\lib\net48\Autodesk.DataExchange.Extensions.Logging.File.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Extensions.Storage.File, Version=2.2.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Autodesk.DataExchange.2.2.6-alpha\lib\net48\Autodesk.DataExchange.Extensions.Storage.File.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Extensions.Storage.File, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Autodesk.DataExchange.3.0.0-beta\lib\net48\Autodesk.DataExchange.Extensions.Storage.File.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Metrics, Version=2.2.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Autodesk.DataExchange.2.2.6-alpha\lib\net48\Autodesk.DataExchange.Metrics.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Metrics, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Autodesk.DataExchange.3.0.0-beta\lib\net48\Autodesk.DataExchange.Metrics.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.OpenAPI, Version=2.2.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Autodesk.DataExchange.2.2.6-alpha\lib\net48\Autodesk.DataExchange.OpenAPI.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.OpenAPI, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Autodesk.DataExchange.3.0.0-beta\lib\net48\Autodesk.DataExchange.OpenAPI.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Resiliency, Version=2.2.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Autodesk.DataExchange.2.2.6-alpha\lib\net48\Autodesk.DataExchange.Resiliency.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Resiliency, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Autodesk.DataExchange.3.0.0-beta\lib\net48\Autodesk.DataExchange.Resiliency.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Schemas, Version=2.2.6.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.2.2.6-alpha\lib\net48\Autodesk.DataExchange.Schemas.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Schemas, Version=3.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.3.0.0-beta\lib\net48\Autodesk.DataExchange.Schemas.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.SourceProvider, Version=2.2.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Autodesk.DataExchange.2.2.6-alpha\lib\net48\Autodesk.DataExchange.SourceProvider.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.SourceProvider, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Autodesk.DataExchange.3.0.0-beta\lib\net48\Autodesk.DataExchange.SourceProvider.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.UI, Version=2.2.6.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.UI.2.2.6-alpha\lib\net48\Autodesk.DataExchange.UI.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.UI, Version=3.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.UI.3.0.0-beta\lib\net48\Autodesk.DataExchange.UI.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.UI.ViewModels, Version=2.2.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Autodesk.DataExchange.UI.2.2.6-alpha\lib\net48\Autodesk.DataExchange.UI.ViewModels.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.UI.ViewModels, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Autodesk.DataExchange.UI.3.0.0-beta\lib\net48\Autodesk.DataExchange.UI.ViewModels.dll</HintPath>
     </Reference>
     <Reference Include="Autodesk.Extensions.Http.ForgeRetry, Version=8.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Autodesk.Extensions.Http.ForgeRetry.8.0.0\lib\netstandard2.0\Autodesk.Extensions.Http.ForgeRetry.dll</HintPath>
@@ -115,9 +115,8 @@
     <Reference Include="Autodesk.Forge, Version=1.9.8.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Autodesk.Forge.1.9.8\lib\net48\Autodesk.Forge.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.GeometryPrimitives">
-      <HintPath>packages\Autodesk.DataExchange.2.2.6-alpha\build\native\libs\Autodesk.GeometryPrimitives.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Autodesk.GeometryPrimitives, Version=0.5.3.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\geometry-primitives-sdk-win-release-x64.0.5.3\lib\netstandard2.0\Autodesk.GeometryPrimitives.dll</HintPath>
     </Reference>
     <Reference Include="CefSharp, Version=105.3.390.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
       <HintPath>packages\CefSharp.Common.105.3.390\lib\net452\CefSharp.dll</HintPath>
@@ -412,13 +411,13 @@
   <Import Project="packages\CefSharp.Common.105.3.390\build\CefSharp.Common.targets" Condition="Exists('packages\CefSharp.Common.105.3.390\build\CefSharp.Common.targets')" />
   <Import Project="packages\ForgeUnits-csharp_win_release_intel64_v142.4.0.3\build\ForgeUnits-csharp_win_release_intel64_v142.targets" Condition="Exists('packages\ForgeUnits-csharp_win_release_intel64_v142.4.0.3\build\ForgeUnits-csharp_win_release_intel64_v142.targets')" />
   <Import Project="packages\ForgeParameters-csharp_win_release_intel64_v142.1.0.1\build\ForgeParameters-csharp_win_release_intel64_v142.targets" Condition="Exists('packages\ForgeParameters-csharp_win_release_intel64_v142.1.0.1\build\ForgeParameters-csharp_win_release_intel64_v142.targets')" />
+  <Import Project="packages\Autodesk.DataExchange.3.0.0-beta\build\Autodesk.DataExchange.targets" Condition="Exists('packages\Autodesk.DataExchange.3.0.0-beta\build\Autodesk.DataExchange.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\Autodesk.DataExchange.2.2.6-alpha\build\Autodesk.DataExchange.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Autodesk.DataExchange.2.2.6-alpha\build\Autodesk.DataExchange.targets'))" />
-    <Error Condition="!Exists('packages\Autodesk.DataExchange.UI.2.2.6-alpha\build\Autodesk.DataExchange.UI.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Autodesk.DataExchange.UI.2.2.6-alpha\build\Autodesk.DataExchange.UI.targets'))" />
+    <Error Condition="!Exists('packages\Autodesk.DataExchange.3.0.0-beta\build\Autodesk.DataExchange.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Autodesk.DataExchange.3.0.0-beta\build\Autodesk.DataExchange.targets'))" />
+    <Error Condition="!Exists('packages\Autodesk.DataExchange.UI.3.0.0-beta\build\Autodesk.DataExchange.UI.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Autodesk.DataExchange.UI.3.0.0-beta\build\Autodesk.DataExchange.UI.targets'))" />
   </Target>
-  <Import Project="packages\Autodesk.DataExchange.2.2.6-alpha\build\Autodesk.DataExchange.targets" Condition="Exists('packages\Autodesk.DataExchange.2.2.6-alpha\build\Autodesk.DataExchange.targets')" />
-  <Import Project="packages\Autodesk.DataExchange.UI.2.2.6-alpha\build\Autodesk.DataExchange.UI.targets" Condition="Exists('packages\Autodesk.DataExchange.UI.2.2.6-alpha\build\Autodesk.DataExchange.UI.targets')" />
+  <Import Project="packages\Autodesk.DataExchange.UI.3.0.0-beta\build\Autodesk.DataExchange.UI.targets" Condition="Exists('packages\Autodesk.DataExchange.UI.3.0.0-beta\build\Autodesk.DataExchange.UI.targets')" />
 </Project>
