--- a/src/App.config
+++ b/src/App.config
@@ -101,6 +101,14 @@
 				<assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-7.0.0.2" newVersion="7.0.0.2" />
 			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Reflection.TypeExtensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="PubnubPCL" publicKeyToken="dc66f52ce6619f44" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.19.5.0" newVersion="6.19.5.0" />
+			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
 
