--- a/src/packages.config
+++ b/src/packages.config
@@ -1,17 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autodesk.DataExchange" version="4.0.4-beta" targetFramework="net48" />
-  <package id="Autodesk.DataExchange.UI" version="4.0.4-beta" targetFramework="net48" />
+  <package id="Autodesk.DataExchange" version="5.0.0-beta" targetFramework="net48" />
+  <package id="Autodesk.DataExchange.UI" version="5.0.0-beta" targetFramework="net48" />
   <package id="Autodesk.Extensions.Http.ForgeRetry" version="8.0.0" targetFramework="net48" />
   <package id="Autodesk.Forge" version="1.9.8" targetFramework="net48" />
-  <package id="ForgeParameters-csharp_win_release_intel64_v142" version="1.0.1" targetFramework="net48" />
-  <package id="ForgeUnits-csharp_win_release_intel64_v142" version="4.0.3" targetFramework="net48" />
-  <package id="geometry-primitives-sdk-win-release-x64" version="0.5.7" targetFramework="net48" />
+  <package id="ForgeParameters-csharp_win_release_intel64_v140" version="3.0.6" targetFramework="net48" />
+  <package id="ForgeUnits-csharp_win_release_intel64_v140" version="5.1.4" targetFramework="net48" />
+  <package id="geometry-primitives-sdk-win-release-x64" version="0.6.3" targetFramework="net48" />
   <package id="Google.Protobuf" version="3.19.4" targetFramework="net48" />
   <package id="IdentityModel" version="6.0.0" targetFramework="net48" />
   <package id="JsonSubTypes" version="2.0.1" targetFramework="net48" />
   <package id="JWT" version="9.0.3" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.SystemWebAdapters" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.17" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.17" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.17" targetFramework="net48" />
@@ -27,31 +29,86 @@
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.23.1" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Logging" version="6.23.1" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.23.1" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
-  <package id="Polly" version="7.2.2" targetFramework="net48" />
+  <package id="MoreLinq.Source.MoreEnumerable.Batch" version="1.0.2" targetFramework="net48" developmentDependency="true" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="PeterO.Cbor" version="4.5.2" targetFramework="net48" />
+  <package id="PeterO.Numbers" version="1.8.2" targetFramework="net48" />
+  <package id="PeterO.URIUtility" version="1.0.0" targetFramework="net48" />
+  <package id="Polly" version="7.2.4" targetFramework="net48" />
   <package id="Polly.Contrib.WaitAndRetry" version="1.1.1" targetFramework="net48" />
   <package id="Polly.Extensions.Http" version="3.0.0" targetFramework="net48" />
   <package id="protobuf-net" version="3.0.101" targetFramework="net48" />
   <package id="protobuf-net.Core" version="3.0.101" targetFramework="net48" />
+  <package id="PubnubPCL" version="6.19.5" targetFramework="net48" />
   <package id="RestSharp" version="108.0.1" targetFramework="net48" />
   <package id="Serilog" version="2.10.0" targetFramework="net48" />
   <package id="Serilog.Settings.AppSettings" version="2.2.2" targetFramework="net48" />
   <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net48" />
   <package id="Serilog.Sinks.Trace" version="3.0.0" targetFramework="net48" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net48" developmentDependency="true" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net48" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Composition" version="8.0.0" targetFramework="net48" />
+  <package id="System.Console" version="4.3.0" targetFramework="net48" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net48" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net48" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net48" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net48" />
+  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net48" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.23.1" targetFramework="net48" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net48" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Linq.Queryable" version="4.0.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net48" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net48" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net48" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="7.0.3" targetFramework="net48" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Dataflow" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.Threading.Thread" version="4.0.0" targetFramework="net48" />
+  <package id="System.Threading.ThreadPool" version="4.0.10" targetFramework="net48" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net48" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net48" />
 </packages>
