Updated to SDK 5.1.1-beta

--- a/src/App.Debug.config
+++ b/src/App.Debug.config
@@ -5,8 +5,8 @@
 	<appSettings>
 		<add key="AuthClientID" value=""  xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)" />		
 		<add key="AuthClientSecret" value=""  xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)" />
-		<add key="AuthCallBack" value="http://localhost:8080/"  xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)" />
-    <add key="ApplicationDataPath" value="" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)"/>
+		<add key="AuthCallBack" value=""  xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)" />
+		<add key="ApplicationDataPath" value="" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)"/>
 		<add key="ApplicationName" value="SampleConnector" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)"/>
     <add key="LogLevel" value="DEBUG"  xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)" />
   </appSettings>
