--- a/src/App.Release.config
+++ b/src/App.Release.config
@@ -5,7 +5,7 @@
 	<appSettings>	
 		<add key="AuthClientID" value=""  xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)" />	
 		<add key="AuthClientSecret" value=""  xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)" />
-		<add key="AuthCallBack" value="http://localhost:3498/"  xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)" />
+		<add key="AuthCallBack" value=""  xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)" />
     <add key="ApplicationDataPath" value="" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)"/>
 		<add key="ApplicationName" value="SampleConnector" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)"/>		
 	</appSettings>
